# faculties

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  archive.rs  archive_common.rs  archive_import_chatgpt.rs  archive_import_codex.rs  archive_import_copilot.rs  archive_import_gemini.rs  atlas.rs  bootstrap.pile  breath  build.rs  compass.rs  discord.rs  files.rs  gauge.rs  headspace  headspace.rs  local_messages.rs  media.rs  memory.rs  memory_create  memory_create.rs  orient.rs  patience.rs  reason  reason.rs  relations.rs  teams.rs  triage.rs  web.rs  wiki.rs  workspace.rs
.github/workflows/: release.yml
assets/: NOTICE
bootstrap/: 01_how_faculties_work.typ  02_wiki_style_guide.typ  03_compass_workflow.typ  04_when_to_use_codex.typ  05_work_as_its_own_ledger.typ  06_tool_selection.typ  07_getting_started.typ  08_files_faculty.typ  09_teams_faculty.typ  10_local_messages_faculty.typ  11_orient_faculty.typ  12_relations_faculty.typ  13_web_faculty.typ  14_research_workflow.typ  15_coordination_workflow.typ  16_auth_setup_workflow.typ  22_harness_hooks.typ  build.sh
examples/: branch_timeline.rs  compass_board.rs  messages_panel.rs  pile_inspector.rs  wiki_viewer.rs
src/: lib.rs  nomic.rs  reachy_kinematics.rs  tokens.rs
src/schemas/: archive.rs  body.rs  compass.rs  decide.rs  discord.rs  embeddings.rs  files.rs  gauge.rs  headspace.rs  local_messages.rs  mail.rs  memory.rs  message.rs  mod.rs  orient.rs  patience.rs  planner.rs  reason.rs  relations.rs  selfimage.rs  senses.rs  teams.rs  triage.rs  voice.rs  web.rs  wiki.rs
src/widgets/: compass.rs  decide.rs  discord.rs  files.rs  inspector.rs  live.rs  mail.rs  memory.rs  messages.rs  mod.rs  planner.rs  relations.rs  review.rs  status.rs  storage.rs  teams.rs  timeline.rs  triage.rs  wiki.rs
tests/: archive_search_fastpath.rs  hnsw_index.rs
