[package]
name = "faculties"
version = "0.16.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An office suite for AI agents: kanban, wiki, files, messaging, and a GORBIE-backed viewer — all persisted in a TribleSpace pile."
authors = ["Jan-Paul Bultmann <jp@bultmann.eu>"]
homepage = "https://github.com/triblespace/faculties"
repository = "https://github.com/triblespace/faculties"
readme = "README.md"
keywords = ["triblespace", "ai-agent", "kanban", "wiki", "notebook"]
categories = ["command-line-utilities", "data-structures"]

# docs.rs should render all public API, including the optional
# `widgets` module (WikiViewer / CompassBoard / etc.) that depends
# on egui/GORBIE/cubecl.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "src/lib.rs"

# GORBIE-backed viewer binary. Requires the `widgets` feature.
[[bin]]
name = "faculties-viewer"
path = "src/bin/faculties-viewer.rs"
required-features = ["widgets"]

[features]
default = []
# GORBIE-backed viewers for faculty branches. Enables the `widgets` module.
widgets = [
    "dep:GORBIE",
    "dep:egui",
    "dep:cubecl",
]

[dependencies]
# Core: every CLI faculty depends on these.
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
ed25519-dalek = "2.1.1"
hifitime = "4.2.3"
rand_core = "0.6.4"
triblespace = { version = "0.43" }

# Per-faculty deps (kept here so faculties stay single-file in src/bin/).
anybytes = "0.20"           # files
base64 = "0.22"             # teams
blake3 = "1"                # mail (deterministic entity id from Message-Id)
chrono = { version = "0.4.39", features = ["clock"] }  # orient
comemo = "0.5.1"            # wiki
dirs = "5"                  # wiki
hex = "0.4"                 # gauge
humantime = "2.3.0"         # orient, patience
ical = "0.11"               # planner
itertools = "0.14"          # wiki
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }  # mail (SMTP send)
libc = "0.2"                # teams
mailparse = "0.16"          # mail (RFC 5322 parser)
rust-pop3-client = "0.3"    # mail (POP3 fetch, rustls-backed)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }  # mail (crypto provider for rust-pop3-client)
rayon = "1.10"              # archive
regex = "1"                 # wiki
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }  # discord, files, teams, web
rrule = "0.14"              # planner
scraper = "0.23"            # archive
serde = { version = "1", features = ["derive"] }  # discord, teams, triage, web
serde_json = "1"            # archive, discord, teams, triage, web
tracing = "0.1"             # archive
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # archive
typst = "0.14"              # wiki
typst-syntax = "0.14"       # wiki

# Widgets-only (optional): GORBIE viewer stack.
GORBIE = { version = "0.15", default-features = false, features = ["typst", "markdown"], optional = true }
egui = { version = "0.34", optional = true }
cubecl = { version = "0.9.0", default-features = false, features = ["wgpu", "std"], optional = true }
