[package]
name = "faculties"
version = "0.20.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An office suite for AI agents: kanban, wiki, files, messaging, and a GORBIE-backed viewer — all persisted in a TribleSpace pile."
authors = ["Jan-Paul Bultmann <jp@bultmann.eu>"]
homepage = "https://github.com/triblespace/faculties"
repository = "https://github.com/triblespace/faculties"
readme = "README.md"
keywords = ["triblespace", "ai-agent", "kanban", "wiki", "notebook"]
categories = ["command-line-utilities", "data-structures"]

# docs.rs should render all public API, including the optional
# `widgets` module (WikiViewer / CompassBoard / etc.) that depends
# on egui/GORBIE/cubecl.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "src/lib.rs"

# GORBIE-backed viewer binary. Requires the `widgets` feature.
[[bin]]
name = "faculties-viewer"
path = "src/bin/faculties-viewer.rs"
required-features = ["widgets"]

# Minimal headless capture target for iterating on planner-widget
# visuals in isolation — avoids spinning up the wiki widget (cubecl
# GPU context) which collides with the headless wgpu renderer on
# some platforms.
[[bin]]
name = "planner-capture"
path = "src/bin/planner-capture.rs"
required-features = ["widgets"]

# Same idea for the headspace widget — minimal capture target that
# skips the wiki widget's GPU init so headless captures of the
# agent-config card don't get truncated.
[[bin]]
name = "headspace-capture"
path = "src/bin/headspace-capture.rs"
required-features = ["widgets"]

# Memory chunks viewer — recent compacted-context summaries.
[[bin]]
name = "memory-capture"
path = "src/bin/memory-capture.rs"
required-features = ["widgets"]

# Gauge research-health dashboard.
[[bin]]
name = "gauge-capture"
path = "src/bin/gauge-capture.rs"
required-features = ["widgets"]

# Messages-only viewer.
[[bin]]
name = "messages-capture"
path = "src/bin/messages-capture.rs"
required-features = ["widgets"]

# Files import-history viewer.
[[bin]]
name = "files-capture"
path = "src/bin/files-capture.rs"
required-features = ["widgets"]

# Triage diagnostic viewer.
[[bin]]
name = "triage-capture"
path = "src/bin/triage-capture.rs"
required-features = ["widgets"]

# Atlas schema-catalog browser.
[[bin]]
name = "atlas-capture"
path = "src/bin/atlas-capture.rs"
required-features = ["widgets"]

# Discord recent-messages viewer.
[[bin]]
name = "discord-capture"
path = "src/bin/discord-capture.rs"
required-features = ["widgets"]

# Teams recent-messages viewer.
[[bin]]
name = "teams-capture"
path = "src/bin/teams-capture.rs"
required-features = ["widgets"]

# Status colony-board viewer.
[[bin]]
name = "status-capture"
path = "src/bin/status-capture.rs"
required-features = ["widgets"]

[features]
default = []
# GORBIE-backed viewers for faculty branches. Enables the `widgets` module.
widgets = [
    "dep:GORBIE",
    "dep:egui",
    "dep:cubecl",
]
# Semantic similarity in `files` (image+text embeddings via mary's embedder).
local-embed = ["dep:mary"]

[dependencies]
# Core: every CLI faculty depends on these.
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
ed25519-dalek = "2.1.1"
hifitime = "4.2.3"
rand_core = "0.6.4"
triblespace = { version = "0.46" }
triblespace-search = { version = "0.46.4" }

# Per-faculty deps (kept here so faculties stay single-file in src/bin/).
anybytes = "0.20"           # files
base64 = "0.22"             # teams
blake3 = "1"                # mail (deterministic entity id from Message-Id)
chrono = { version = "0.4.39", features = ["clock"] }  # orient
comemo = "0.5.1"            # wiki
dirs = "5"                  # wiki
dryoc = "0.8"               # secrets (libsodium-compatible pure-Rust crypto)
hex = "0.4"                 # gauge
humantime = "2.3.0"         # orient, patience
ical = "0.11"               # planner
itertools = "0.14"          # wiki
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }  # mail (SMTP send)
libc = "0.2"                # teams
mailparse = "0.16"          # mail (RFC 5322 parser)
rust-pop3-client = "0.3"    # mail (POP3 fetch, rustls-backed)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }  # mail (crypto provider for rust-pop3-client)
rayon = "1.10"              # archive
regex = "1"                 # wiki
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json", "multipart"] }  # discord, files, teams, web, body(say)
rrule = "0.14"              # planner
scraper = "0.23"            # archive
serde = { version = "1", features = ["derive"] }  # discord, teams, triage, web
serde_json = "1"            # archive, discord, teams, triage, web
tracing = "0.1"             # archive
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # archive
typst = "0.14"              # wiki
typst-syntax = "0.14"       # wiki

# Widgets-only (optional): GORBIE viewer stack.
GORBIE = { version = "0.18.1", default-features = false, features = ["typst", "markdown"], optional = true }
egui = { version = "0.34", optional = true }
cubecl = { version = "0.9.0", default-features = false, features = ["wgpu", "std"], optional = true }

# Local-embed-only (optional): mary's CLIP/SigLIP multi-modal embedder (CLIP
# image+text shared space, behind `embed`) plus nomic-embed-multimodal-7b (the
# 3584-d dense image/text space, behind `gemma` — pulls the Qwen2.5-VL port +
# Metal/wgpu backend). Heavy, so gated behind `local-embed`; the default build
# stays light.
mary = { path = "../mary", default-features = false, features = ["embed", "gemma"], optional = true }

# ── patches ────────────────────────────────────────────────────────────────
# `[patch]` only takes effect from the *root* crate of a build, so mary's own
# patch section is ignored when mary is consumed as a path dep here. We mirror
# it: the nomic-mm7b zero-copy aliasing path (`local-embed`) needs the cubecl
# fork (adds `register_external_aliased`) and the V3 256-byte-aligned local
# triblespace-core. The cubecl patches are only exercised under `local-embed`
# (mary's cubecl 0.10); the default and `local-embed` builds resolve cleanly.
# NOTE: `--features widgets` (faculties' own cubecl 0.9 GPU graph layout) is
# incompatible with these cubecl 0.10 patches — build widgets and local-embed
# separately until the widgets GPU code is migrated to cubecl 0.10.
[patch.crates-io]
cubecl-runtime = { path = "../cubecl-fork/cubecl-runtime" }
cubecl-wgpu = { path = "../cubecl-fork/cubecl-wgpu" }
triblespace-core = { path = "../triblespace-rs/triblespace-core" }
